从手势开始

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/index.js"></script>
     <title>宣传页</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="page">11111</div>
+        <div class="page">22222</div>
+        <div class="page">33333</div>
+        <div class="page">44444</div>
+    </div>
 </body>
+<script>
+    Leaflet.init({doc:".container"});
+</script>
 </html>
