--- a/index.html
+++ b/index.html
@@ -9,14 +9,27 @@
     <title>宣传页</title>
 </head>
 <body>
-    <div class="container">
-        <div class="page">11111</div>
-        <div class="page">22222</div>
-        <div class="page">33333</div>
-        <div class="page">44444</div>
+    <div class="container" style="font-size:20px">
+        <div class="">11111</div>
+        <div class="">22222</div>
+        <div class="">33333</div>
+        <div class="">44444</div>
     </div>
 </body>
 <script>
-    Leaflet.init({doc:".container"});
+    Leaflet.init({doc:".container",//内容容器
+                  onSwipeUp:function(ele){//上一页
+                    //{prev:[prevEle,prev],上一页的元素,以及下标
+                    //current:[current,currentIndex],//当前页的元素以及下标
+                    //next:[nextEle,next]}//下一页的元素以及下标
+                    //可以用下标判断当前是哪一页来执行换页显示时的动画
+                  },
+                  onSwipeDown:function(ele){//下一页
+                  },
+                  //支持animate.css  等css3第三方的动画库
+                  //必需同时设置,默认fadeInUp,fadeInDown效果
+                  InUp:"up",//下一页css3动画样式
+                  InDown:"down"//上一页css3动画样式
+                });
 </script>
 </html>
