添加背景音乐的功能

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
                   //支持animate.css  等css3第三方的动画库
                   //必需同时设置,默认fadeInUp,fadeInDown效果
                   InUp:"up",//下一页css3动画样式
-                  InDown:"down"//上一页css3动画样式
+                  InDown:"down",//上一页css3动画样式
+                  music:{//背景音乐,默认不设置
+                    src:"\public\bgm.mp3",
+                    icon:"\public\bgmBtn-icon.svg",
+                    autoPlay:true,
+                  }
                 });
 </script>
 </html>
