--- a/dev.html
+++ b/dev.html
@@ -9,13 +9,8 @@
     <title>宣传页</title>
 </head>
 <body>
-    <div class="container">
-        <div>
-            <div >
-            <p class="slogan">深圳健康网.健康深圳APP</p>
-            <span class="slogan">— 助力“智慧健康”</span>
-            </div>
-        </div>
+    <div class="container" style="font-size:20px">
+        <div class="">11111</div>
         <div class="">22222</div>
         <div class="">33333</div>
         <div class="">44444</div>
@@ -28,11 +23,6 @@
                     //current:[current,currentIndex],//当前页的元素以及下标
                     //next:[nextEle,next]}//下一页的元素以及下标
                     //可以用下标判断当前是哪一页来执行换页显示时的动画
-                    if(ele.current[1]===1){
-                        var slogan=document.querySelectorAll("slogan");
-                        if(slogan){
-                        }
-                    }
                   },
                   onSwipeDown:function(ele){//下一页
                   },
