--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="node_modules/eruda/eruda.min.js"></script>
+    <!-- <script src="node_modules/eruda/eruda.min.js"></script> -->
+    <!-- <script src="http://192.168.0.48:8080/target/target-script-min.js#anonymous"></script> -->
     <script type="text/javascript" src="js/index.js"></script>        
     <title>宣传页</title>
 </head>
@@ -12,8 +13,8 @@
     <div class="container">
         <div>
             <div >
-            <p class="slogan">深圳健康网.健康深圳APP</p>
-            <span class="slogan">— 助力“智慧健康”</span>
+            <p style="display:none">深圳健康网.健康深圳APP</p>
+            <span >— 助力“智慧健康”</span>
             </div>
         </div>
         <div class="">22222</div>
@@ -21,33 +22,6 @@
         <div class="">44444</div>
     </div>
 </body>
-<script>
-    Leaflet.init({doc:".container",//内容容器
-                  onSwipeUp:function(ele){//上一页
-                    //{prev:[prevEle,prev],上一页的元素,以及下标
-                    //current:[current,currentIndex],//当前页的元素以及下标
-                    //next:[nextEle,next]}//下一页的元素以及下标
-                    //可以用下标判断当前是哪一页来执行换页显示时的动画
-                    if(ele.current[1]===1){
-                        var slogan=document.querySelectorAll("slogan");
-                        if(slogan){
-                        }
-                    }
-                  },
-                  onSwipeDown:function(ele){//下一页
-                  },
-                  //支持animate.css  等css3第三方的动画库
-                  //必需同时设置,默认fadeInUp,fadeInDown效果
-                  InUp:"up",//下一页css3动画样式
-                  InDown:"down",//上一页css3动画样式
-                  music:{//背景音乐,默认不设置
-                    src:"public/bgm.mp3",
-                    icon:"public/bgmBtn-icon.svg",
-                    autoPlay:false,
-                  },
-                  progress:true//进度条
-                });
-</script>
 <!-- <script>
 var el = document.createElement('div');
 document.body.appendChild(el);
@@ -56,4 +30,53 @@ eruda.init({
     tool: ['console', 'elements']
 });
 </script> -->
+<script>
+    Leaflet.init({doc:".container",//内容容器
+                  onSwipeUp:function(ele){//上一页
+                    //{prev:[prevEle,prev],上一页的元素,以及下标
+                    //current:[current,currentIndex],//当前页的元素以及下标
+                    //next:[nextEle,next]}//下一页的元素以及下标
+                    //可以用下标判断当前是哪一页来执行换页显示时的动画
+                    var current=ele.current;
+                    alert(ele.current[0]);
+                  },
+                  onSwipeDown:function(ele){//下一页
+                        alert(ele.current[0]);
+                  },
+                  //支持animate.css  等css3第三方的动画库
+                  //必需同时设置,默认fadeInUp,fadeInDown效果
+                  InUp:"up",//下一页css3动画样式
+                  InDown:"down",//上一页css3动画样式
+                  music:{//背景音乐,默认不设置
+                    src:"public/bgm.mp3",
+                    icon:"public/bgmBtn-icon.svg",
+                    autoPlay:true,
+                  },
+                  progress:true//进度条
+                });
+
+function addClass(o,c) {
+    var o_class=o.className,blank=(o_class != "")? " ":"";
+    added=o_class+blank+c;
+    o.className=added;
+}
+function addArrClass(arr,c){
+    for (var i=0; i<arr.length;i++) {addClass(arr[i],c);}
+}
+function removeClass(o,c) {
+    var o_class=" "+o.className+" ";
+    o_class=o_class.replace(/(\s+)/gi," ");
+    removed = o_class.replace(' '+c+' ', ' ');
+    removed = removed.replace(/(^\s+)|(\s+$)/g, '');
+    o.className=removed;
+}
+function removeArrClass(arr,c){
+    for (var i=0; i<arr.length;i++) {removeClass(arr[i],c);}
+}
+function hasClass(o,c) {
+	var o_class=o.className,c_lst=o_class.split(/\s+/),x=0;
+	for(x in c_lst){if(c_lst[x]==c){return true;}}
+	return false;
+}
+</script>
 </html>
