--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="container">
         <div>
-            <div >
-            <p style="display:none">深圳健康网.健康深圳APP</p>
-            <span >— 助力“智慧健康”</span>
+            <div class="slogan">
+            <p class="zoomIn">深圳健康网.健康深圳APP</p>
+            <span class="zoomIn">— 助力“智慧健康”</span>
             </div>
         </div>
         <div class="">22222</div>
@@ -31,17 +31,47 @@ eruda.init({
 });
 </script> -->
 <script>
+    var sloganP=document.querySelector(".slogan p");
+    var spanSpan=document.querySelector(".slogan span");
+    // sloganP.addEventListener("animationend",function(){
+    //     removeClass(sloganP,'zoomIn');
+    // },false);
+    // spanSpan.addEventListener("animationend",function(){
+    //     removeClass(spanSpan,'zoomIn');
+    // },false);
     Leaflet.init({doc:".container",//内容容器
-                  onSwipeUp:function(ele){//上一页
-                    //{prev:[prevEle,prev],上一页的元素,以及下标
-                    //current:[current,currentIndex],//当前页的元素以及下标
-                    //next:[nextEle,next]}//下一页的元素以及下标
-                    //可以用下标判断当前是哪一页来执行换页显示时的动画
-                    var current=ele.current;
-                    alert(ele.current[0]);
+                //{prev:[prevEle,prev],上一页的元素,以及下标
+                //current:[current,currentIndex],//当前页的元素以及下标
+                //next:[nextEle,next]}//下一页的元素以及下标
+                //可以用下标判断当前是哪一页来执行换页显示时的动画
+                  onSwipeUpStart:function(ele){//动画开始前
+                    if(ele.current[1]===0){
+                        removeClass(sloganP,"zoomIn");
+                        removeClass(spanSpan,"zoomIn");
+                    }
                   },
-                  onSwipeDown:function(ele){//下一页
-                        alert(ele.current[0]);
+                  onSwipeDownStart:function(ele){//动画开始前
+                    if(ele.current[1]===0){
+                        removeClass(sloganP,"zoomIn");
+                        removeClass(spanSpan,"zoomIn");
+                    }
+                  },
+                  onSwipeUpEnd:function(ele){//上一页 动画结束
+                    if(ele.current[1]===0){
+                            sloganP.style.display="block";
+                            spanSpan.style.display="block";
+                            addClass(sloganP,"zoomIn");
+                            addClass(spanSpan,"zoomIn");
+                    }
+                        
+                  },
+                  onSwipeDownEnd:function(ele){//下一页 动画结束
+                    if(ele.current[1]===0){
+                        sloganP.style.display="block";
+                        spanSpan.style.display="block";
+                        addClass(sloganP,"zoomIn");
+                        addClass(spanSpan,"zoomIn");
+                    }
                   },
                   //支持animate.css  等css3第三方的动画库
                   //必需同时设置,默认fadeInUp,fadeInDown效果
@@ -55,6 +85,8 @@ eruda.init({
                   progress:true//进度条
                 });
 
+
+                
 function addClass(o,c) {
     var o_class=o.className,blank=(o_class != "")? " ":"";
     added=o_class+blank+c;
